Update: added transform_df

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = bsm_pricing
-version = 0.2.1
+version = 0.2.2
 author = Clive Lam
 author_email = clivelamkk@gmail.com
-description = A Python package for Black-Scholes-Merton option pricing, including inverse futures and implied volatility calculations
+description = Python package for Black-Scholes-Merton option pricing, including inverse futures, implied volatility calculations, and volatility curve generation
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/clivelamkk/bsm_pricing
@@ -17,4 +17,5 @@ packages = find:
 python_requires = >=3.8
 install_requires =
     numpy>=1.21.0
+    pandas>=1.4.0
     scipy>=1.7.0
