--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bsm_pricing"
-version = "0.2.1"
-description = "A Python package for Black-Scholes-Merton option pricing, including inverse futures and implied volatility calculations"
+version = "0.2.2"
+description = "Python package for Black-Scholes-Merton option pricing, including inverse futures, implied volatility calculations, and volatility curve generation"
 readme = "README.md"
 authors = [{name = "Clive Lam", email = "clivelamkk@gmail.com"}]
 license = {file = "LICENSE"}
 requires-python = ">=3.8"
 dependencies = [
     "numpy>=1.21.0",
+    pandas>=1.4.0,
     "scipy>=1.7.0"
 ]
 classifiers = [
