--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ license = {file = "LICENSE"}
 requires-python = ">=3.8"
 dependencies = [
     "numpy>=1.21.0",
-    pandas>=1.4.0,
+    "pandas>=1.4.0",
     "scipy>=1.7.0"
 ]
 classifiers = [
